fixed header and button display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 :root {
+    --header-height: 100px;
     --border-radius: 5px;
     --main-color: #115905;
     --main-color-light: #1f7c07;
@@ -7,17 +8,17 @@
 }
 
 .verticalView {
-    row-gap: 10px;
     display: flex;
+    row-gap: 10px;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 20px);
     position: relative;
 }
 
 .verticalView header {
     background-color: var(--main-color);
     color: white;
-    height: 100px;
+    min-height: var(--header-height);
     padding: 0 10px;
     display: grid;
     grid-template-columns: 70px auto 70px;
@@ -58,7 +59,13 @@
 .verticalView form {
     flex: auto;
     display: flex;
+    row-gap: 10px;
     flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.verticalView form .mainContainer {
+    overflow-y: auto;
 }
 
 .verticalView label:nth-child(1) {
@@ -134,10 +141,6 @@ input[type="range" i] {
 }
 
 .verticalView .buttonBlock {
-    position: sticky;
-    bottom: 20px;
-    right: 0;
-    left: 0;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
@@ -265,8 +268,9 @@ input[type="range" i] {
 
 .listContainer li.finished {
     background-color: var(--main-hover-color);
-    opacity: 0.5;
+    opacity: 0.8;
     text-decoration: line-through;
+    filter: brightness(0.5);
 }
 
 .listContainer li:hover {
